fixed settings input on iOS, increased textarea height, extracted links to constants

--- a/src/assets/_mixins.scss
+++ b/src/assets/_mixins.scss
@@ -96,6 +96,12 @@
   user-select: none;
 }
 
+@mixin select($value) {
+  -webkit-user-select: $value;
+  -moz-user-select: $value;
+  user-select: $value;
+}
+
 @mixin pointer-events($value) {
   -webkit-pointer-events: $value;
   -moz-pointer-events: $value;
